# finance-tracker

./: .gitignore  CMakeLists.txt  README.md
bot/: BotHandler.cpp  CMakeLists.txt
server/: Server.cpp
src/: main.cpp
src/database/: Database.cpp  Database.h
src/server/: CMakeLists.txt
tests/: CMakeLists.txt  test_bot.cpp
utils/: CMakeLists.txt
